# BitTorrent

./: .gitignore  CMakeLists.txt  README.md  test.torrent
include/: bencode_parser.hpp  logger.hpp  torrent_file.hpp  tracker_client.hpp
src/: bencode_parser.cpp  main.cpp  torrent_file.cpp  tracker_client.cpp
test_files/: test.txt
